--- a/client/src/index.css
+++ b/client/src/index.css
@@ -43,36 +43,6 @@
     background-color: #f4f4f4;
     /* transition: all 0.1s ease-in; */
 }
-
-/* .inActiveNavlink::before {
-    content: "";
-    position: absolute;
-    top: -50px;
-    right: -1px;
-    width: 35px;
-    height: 50px;
-    background-color: transparent;
-    border-bottom-right-radius: 15px;
-    box-shadow: 0 10px 0 0 #f4f4f4;
-    transition: all 0.1s ;
-
-}
-
-.inActiveNavlink::after {
-    content: "";
-    transform: rotateX(180deg);
-    position: absolute;
-    bottom: -50px;
-    right: -1px;
-    width: 35px;
-    height: 50px;
-    background-color: transparent;
-    border-bottom-right-radius: 15px;
-    box-shadow: 0 10px 0 0 #f4f4f4;
-    transition: all 0.1s ease-in;
-} */
-
-
 .addContentWindow{
     @apply relative flex flex-col items-center justify-center
 }
@@ -123,4 +93,27 @@
         visibility: visible;
     }
     
+}
+
+/* Loading skeleton animtion */
+.loadingSkeleton{
+    background: linear-gradient(130deg, #f0f0f040 25%, #e0e0e040 50%, #f0f0f040 75%);
+    background-size: 200% 100%;
+    animation: skeleton-animation 3s infinite linear;
+    & .s-box {
+        @apply size-60 border-4;
+        border-radius: 20px;
+        background: linear-gradient(130deg, #f0f0f0 25%, #e0e0e0 50%, #f0f0f0 75%);
+        background-size: 200% 100%;
+        animation: skeleton-animation 3s infinite linear;
+    }
+}
+
+@keyframes skeleton-animation {
+    0% {
+        background-position: 200% 0;
+    }
+    100% {
+        background-position: -200% 0;
+    }
 }
